--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,25 @@
+[tool.poetry]
+name = "configgery-client"
+version = "2.0.0"
+description = "Python client for devices interacting with configgery.com"
+authors = ["Robert Weiss <rob@configgery.com>"]
+license = "MIT License"
+readme = "README.md"
+packages = [{include = "configgery"}]
+
+[tool.poetry.dependencies]
+python = "^3.8"
+urllib3 = "^2.1.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.4"
+freezegun = "^1.4.0"
+
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
-]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-minversion = "6.0"
-addopts = "-ra -q"
 testpaths = [
     "tests",
 ]
