--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ urllib3 = "^2.1.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
 freezegun = "^1.4.0"
+black = "^24.2.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -27,3 +28,6 @@ log_cli = true
 log_cli_level = "INFO"
 log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+
+[tool.black]
+line-length = 120
