--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ build-backend = "poetry.core.masonry.api"
 testpaths = [
     "tests",
 ]
+pythonpath = "configgery"
 log_cli = true
 log_cli_level = "INFO"
 log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
