--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [tool.poetry]
 name = "configgery-client"
-version = "2.1.0"
+version = "2.1.1"
 description = "Python client for devices interacting with configgery.com"
 authors = ["Robert Weiss <rob@configgery.com>"]
 license = "MIT License"
 readme = "README.md"
+homepage = "https://configgery.com"
+repository = "https://github.com/Configgery/configgery-client-python"
 packages = [{include = "configgery"}]
 
 [tool.poetry.dependencies]
